<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/cardId"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#B0050505">

        <ImageView
            android:id="@+id/movieImgId"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleId"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <TextView
                android:id="@+id/ratingId"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/overviewId"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:text="@string/overview"

                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>