<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="nl.hasan.movieapp.activities.LoginActivity">

    <TextView
        android:id="@+id/login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_id"
        android:layout_marginTop="100dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_container"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/saveLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_container"
        android:onClick="checkboxClicked"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/login_btn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_container"
        android:layout_marginTop="80dp"
        android:onClick="login"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:strokeColor="@color/white" />

    <LinearLayout
        android:id="@+id/login_text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? " />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToRegister"
            android:text="Register now "
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text_container"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:indeterminate="true"
        android:visibility="invisible"
        />

</RelativeLayout>