<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.hasan.movieapp.activities.DetailActivity"
    >

    <LinearLayout
        android:id="@+id/topBarDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:onClick="backHome"
            app:icon="@drawable/ic_baseline_arrow_back"
            app:iconTint="@color/white"
            app:strokeWidth="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBarDetails"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movieImg"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieImg"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/rating" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/overview" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/favId"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:elevation="10dp"
                android:onClick="addToFav"
                android:text="Add to favorite   "
                android:textColor="@color/red"
                app:icon="@drawable/ic_favorite"
                app:iconGravity="textEnd"
                app:iconSize="16dp"
                app:iconTint="@color/red"
                app:strokeColor="@color/red" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>